[package]
name = "sugarflower"
version = "0.1.0"
edition = "2021"

[dependencies]
encoding_rs = "0.8.32"

csv = "1.2.1"
#binaryfile = { git = "https://github.com/sugarflowers/binaryfile.git" }
#sjis = { git = "https://github.com/sugarflowers/sjis.git" }
linked-hash-map = "0.5.6"

[lib]
path = "src/lib.rs"

